--- a/crudangular/src/app/components/navbar/navbar.component.html
+++ b/crudangular/src/app/components/navbar/navbar.component.html
@@ -6,6 +6,6 @@
     
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/incluir">Incluir</a></li>
+      <li><a href="/incluir">Incluir Produto</a></li>
     </ul>
   </nav>
